--- a/docs/workshop/LAB-SETUP.ipynb
+++ b/docs/workshop/LAB-SETUP.ipynb
@@ -22,18 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREDENTIALS\n",
-    "Username     = \"Username\"\n",
-    "\n",
-    "Password     = \"Password\"\n",
-    "\n",
-    "AzureEnvName = \"AzureEnvName\"\n",
-    "\n",
-    "Subscription = \"Subscription\""
+    "Username     = \"User1-46317903@LODSPRODMCA.onmicrosoft.com\"\n",
+    "Password     = \"Bd0Be1#!Dh\"\n",
+    "AzureEnvName = \"AITOUR46317903\"\n",
+    "Subscription = \"645c50d7-1335-4ab4-8219-de8f2312b463\""
    ]
   },
   {
@@ -60,9 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[0;33m!\u001b[0m First copy your one-time code: \u001b[0;1;39m6054-F4B5\u001b[0m\n",
+      "\u001b[0;1;39mOpen this URL\u001b[0m to continue in your web browser: https://github.com/login/device\n",
+      "\u001b[0;32m✓\u001b[0m Authentication complete.\n",
+      "- gh config set -h github.com git_protocol https\n",
+      "\u001b[0;32m✓\u001b[0m Configured git protocol\n",
+      "\u001b[0;33m!\u001b[0m Authentication credentials saved in plain text\n",
+      "\u001b[0;32m✓\u001b[0m Logged in as \u001b[0;1;39msgomezgomez\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo Y | GITHUB_TOKEN=\"\" gh auth login --hostname github.com --git-protocol https --web --scopes workflow "
    ]
@@ -76,9 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[K\u001b[0;32m✓\u001b[0m Created fork \u001b[0;1;39msgomezgomez/contoso-creative-writer\u001b[0m\n",
+      "\u001b[0;32m✓\u001b[0m Added remote \u001b[0;1;39morigin\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! GITHUB_TOKEN=\"\" gh repo fork --remote"
    ]
@@ -96,9 +117,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mAuthentication with username and password in the command line is strongly discouraged. Use one of the recommended authentication methods based on your requirements. For more details, see https://go.microsoft.com/fwlink/?linkid=2276314\u001b[0m\n",
+      "[\n",
+      "  {\n",
+      "    \"cloudName\": \"AzureCloud\",\n",
+      "    \"homeTenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"id\": \"645c50d7-1335-4ab4-8219-de8f2312b463\",\n",
+      "    \"isDefault\": true,\n",
+      "    \"managedByTenants\": [],\n",
+      "    \"name\": \"AIDay-lod49941777\",\n",
+      "    \"state\": \"Enabled\",\n",
+      "    \"tenantDefaultDomain\": \"LODSPRODMCA.onmicrosoft.com\",\n",
+      "    \"tenantDisplayName\": \"LODS-Prod-MCA\",\n",
+      "    \"tenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"user\": {\n",
+      "      \"name\": \"User1-46317903@LODSPRODMCA.onmicrosoft.com\",\n",
+      "      \"type\": \"user\"\n",
+      "    }\n",
+      "  }\n",
+      "]\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! az login -u $Username -p $Password"
    ]
@@ -114,9 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "- **Username**: `User1-46317903@LODSPRODMCA.onmicrosoft.com`\n",
+       " - **Password**: `Bd0Be1#!Dh`"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"- **Username**: `{Username}`\\n - **Password**: `{Password}`\")"
@@ -124,9 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start by copying the next code: \u001b[1mAV8K3G7FV\u001b[0m\n",
+      "Then, go to: https://microsoft.com/devicelogin\n",
+      "Waiting for you to complete authentication in the browser...\n",
+      "Device code authentication completed.\n",
+      "Logged in to Azure.ing subscriptions...\n"
+     ]
+    }
+   ],
    "source": [
     "! azd auth login --use-device-code --no-prompt"
    ]
@@ -151,9 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "azd env refresh -e AITOUR46317903"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"azd env refresh -e {AzureEnvName}\")"
@@ -175,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +287,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-12-03T21:32:10.693072+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/resourceGroups/rg-AITOUR46317903/providers/Microsoft.Authorization/roleAssignments/736b3b1e-467d-413b-b671-4ee24b8882a3\",\n",
+      "  \"name\": \"736b3b1e-467d-413b-b671-4ee24b8882a3\",\n",
+      "  \"principalId\": \"62e8809d-e89e-48b0-a11a-924146c46e2f\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR46317903\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/providers/Microsoft.Authorization/roleDefinitions/8ebe5a00-799e-43f5-93ac-243d3dce84a7\",\n",
+      "  \"scope\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/resourceGroups/rg-AITOUR46317903\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"62e8809d-e89e-48b0-a11a-924146c46e2f\",\n",
+      "  \"updatedOn\": \"2024-12-03T21:32:10.821069+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-12-03T21:32:11.694176+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/resourceGroups/rg-AITOUR46317903/providers/Microsoft.Authorization/roleAssignments/1167880d-3dd3-4996-8811-d985aa1e3b20\",\n",
+      "  \"name\": \"1167880d-3dd3-4996-8811-d985aa1e3b20\",\n",
+      "  \"principalId\": \"62e8809d-e89e-48b0-a11a-924146c46e2f\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR46317903\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/providers/Microsoft.Authorization/roleDefinitions/1407120a-92aa-4202-b7e9-c0e197c71c8f\",\n",
+      "  \"scope\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/resourceGroups/rg-AITOUR46317903\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"62e8809d-e89e-48b0-a11a-924146c46e2f\",\n",
+      "  \"updatedOn\": \"2024-12-03T21:32:11.867187+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-12-03T21:32:13.428376+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/resourceGroups/rg-AITOUR46317903/providers/Microsoft.Authorization/roleAssignments/82a623cf-bc29-47f8-9cdd-e0a58e5b9f7a\",\n",
+      "  \"name\": \"82a623cf-bc29-47f8-9cdd-e0a58e5b9f7a\",\n",
+      "  \"principalId\": \"62e8809d-e89e-48b0-a11a-924146c46e2f\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR46317903\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/providers/Microsoft.Authorization/roleDefinitions/5e0bd9bd-7b93-4f28-af87-19fc36ad61bd\",\n",
+      "  \"scope\": \"/subscriptions/645c50d7-1335-4ab4-8219-de8f2312b463/resourceGroups/rg-AITOUR46317903\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"62e8809d-e89e-48b0-a11a-924146c46e2f\",\n",
+      "  \"updatedOn\": \"2024-12-03T21:32:13.526375+00:00\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "! bash ../../infra/hooks/roles.sh"
    ]
@@ -215,9 +365,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mRunning hooks (azd hooks run)\u001b[0m\n",
+      "\u001b[90mFinding and executing \u001b[36mpostprovision\u001b[0m hooks for environment \u001b[36mAITOUR46317903\u001b[0m.\u001b[0m\n",
+      "\n",
+      "\u001b[K  Running 1 postprovision command hook(s) for project\n",
+      "\n",
+      "\u001b[K  ──── Project: postprovision Hook Output ──────────────────────────────────────\n",
+      "\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\u001b[K  --- 🎉 | 4. Access your ACA deployed web app here: https://agent-web.jollytr\n",
+      "\u001b[K  ee-28063c34.canadaeast.azurecontainerapps.io\n",
+      "\n",
+      "\u001b[KRunning 1 postprovision command hook(s) for project──────────────────────────\n",
+      "  \u001b[32m(✓) Done:\u001b[0m Running 1 postprovision command hook(s) for project\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for api (No hook found)\n",
+      "Running 0 postprovision service hook(s) for web\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for web (No hook found)\n",
+      "\u001b[32m\n",
+      "SUCCESS: Your hooks have been run successfully\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo 1 | azd hooks run postprovision -e $AzureEnvName"
    ]
